# remeshing_project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
meshes/: decimated_knight.off  head.off
src/: dataStructures.h  delaunayTriangulation.cpp  delaunayTriangulation.h  main.cpp  meshMetrics.cpp  meshMetrics.h  remeshingTools.cpp  remeshingTools.h
